Added angularjs keyboard test controller

--- a/node/assets/inexorui/index.html
+++ b/node/assets/inexorui/index.html
@@ -11,10 +11,11 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
 </head>
-<body>
+<body style="background-color: transparent;">
   <ul class="nav nav-tabs">
     <li><a href="#" ui-sref="/main">Main Menu</a></li>
     <li><a href="#" ui-sref="/console">Console</a></li>
+    <li><a href="#" ui-sref="/test/keyboard">Keyboard</a></li>
   </ul>
 
   <div ui-view></div>
