--- a/node/assets/inexorui/index.html
+++ b/node/assets/inexorui/index.html
@@ -12,15 +12,60 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
 </head>
 <body style="background-color: transparent;">
-  <ul class="nav nav-tabs">
-    <li><a href="#" ui-sref="/main">Main Menu</a></li>
-    <li><a href="#" ui-sref="/console">Console</a></li>
-    <li><a href="#" ui-sref="/test/keyboard">Keyboard</a></li>
-  </ul>
+
+  <div ng-controller="TabbedNavigationController">
+    <ul class="nav nav-tabs">
+      <li ng-repeat="tab in tabs"><a href="#" ui-sref="{{tab.state}}">{{tab.label}}</a></li>
+    </ul>
+  </div>
 
   <div ui-view></div>
 
   <!-- TODO: provide libraries locally, else the client will not work without internet connection! -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.22/require.min.js" data-main="inexorui/main"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.22/require.min.js" data-main="inexorui/inexorui-require"></script>
+  
+  <style>
+/* The console container element */
+    #console {
+      position: absolute;
+      width: 100%;
+      height: 250px;
+      background-color: rgba(0,0,0,127);
+    }
+    /* The inner console element. */
+    .jqconsole {
+        padding: 10px;
+    }
+    /* The cursor. */
+    .jqconsole-cursor {
+        background-color: rgba(0,0,0,127);
+    }
+    /* The cursor color when the console looses focus. */
+    .jqconsole-blurred .jqconsole-cursor {
+        background-color: #666;
+    }
+    /* The current prompt text color */
+    .jqconsole-prompt {
+        color: #0d0;
+    }
+    /* The command history */
+    .jqconsole-old-prompt {
+        color: #0b0;
+        font-weight: normal;
+    }
+    /* The text color when in input mode. */
+    .jqconsole-input {
+        color: #dd0;
+    }
+    /* Previously entered input. */
+    .jqconsole-old-input {
+        color: #bb0;
+        font-weight: normal;
+    }
+    /* The text color of the output. */
+    .jqconsole-output {
+        color: black;
+    }
+  </style>
 </body>
 </html>
