--- a/node/assets/inexorui/index.html
+++ b/node/assets/inexorui/index.html
@@ -8,64 +8,36 @@
   <title>Inexor User Interface</title>
 
   <!-- TODO: provide libraries locally, else the client will not work without internet connection! -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="/inexorui/css/inexorui.css" />
 </head>
-<body style="background-color: transparent;">
-
-  <div ng-controller="TabbedNavigationController">
-    <ul class="nav nav-tabs">
-      <li ng-repeat="tab in tabs"><a href="#" ui-sref="{{tab.state}}">{{tab.label}}</a></li>
-    </ul>
+<body>
+  <!-- The HUD section                                        -->
+  <!--                                                        -->
+  <!-- Each HUD needs a controller and a template             -->
+  <div id="hud" ng-controller="ParentHudController">
+    <div ng-include="'inexorui/partials/hud/console.html'"></div>
   </div>
 
-  <div ui-view></div>
+  <div ng-controller="TabbedNavigationController">
+    <!-- The navigation section                               -->
+    <ul class="nav nav-tabs" ng-if="navigationVisible">
+      <li ng-repeat="tab in tabs"><a href="#" ui-sref="{{tab.state}}">{{tab.label}}</a></li>
+    </ul>
+    <!--                                                      -->
+    <!-- The view will be rendered here                       -->
+    <!--                                                      -->
+    <!-- Each page needs a controller, a template and a route -->
+    <!--   Add new controllers in folder controllers          -->
+    <!--   Add new templates in folder partials               -->
+    <!--   Add new routes in inexorui-routes.js               -->
+    <!--   Add new tabs in TabbedNavigationController.js      -->
+    <!--                                                      -->
+    <div ui-view></div>
+  </div>
 
   <!-- TODO: provide libraries locally, else the client will not work without internet connection! -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.22/require.min.js" data-main="inexorui/inexorui-require"></script>
-  
-  <style>
-/* The console container element */
-    #console {
-      position: absolute;
-      width: 100%;
-      height: 250px;
-      background-color: rgba(0,0,0,127);
-    }
-    /* The inner console element. */
-    .jqconsole {
-        padding: 10px;
-    }
-    /* The cursor. */
-    .jqconsole-cursor {
-        background-color: rgba(0,0,0,127);
-    }
-    /* The cursor color when the console looses focus. */
-    .jqconsole-blurred .jqconsole-cursor {
-        background-color: #666;
-    }
-    /* The current prompt text color */
-    .jqconsole-prompt {
-        color: #0d0;
-    }
-    /* The command history */
-    .jqconsole-old-prompt {
-        color: #0b0;
-        font-weight: normal;
-    }
-    /* The text color when in input mode. */
-    .jqconsole-input {
-        color: #dd0;
-    }
-    /* Previously entered input. */
-    .jqconsole-old-input {
-        color: #bb0;
-        font-weight: normal;
-    }
-    /* The text color of the output. */
-    .jqconsole-output {
-        color: black;
-    }
-  </style>
 </body>
 </html>
