Use bower for frontend dependency management

--- a/node/assets/index.html
+++ b/node/assets/index.html
@@ -8,8 +8,8 @@
   <title>Inexor User Interface</title>
 
   <!-- TODO: provide libraries locally, else the client will not work without internet connection! -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="/bower_components/bootstrap/font-awesome/css/font-awesome.min.css" />
   <link rel="stylesheet" href="/inexorui/css/inexorui.css" />
 </head>
 <body>
@@ -38,6 +38,6 @@
   </div>
 
   <!-- TODO: provide libraries locally, else the client will not work without internet connection! -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.22/require.min.js" data-main="inexorui/inexorui-require"></script>
+  <script src="/bower_components/requirejs/require.js" data-main="config"></script>
 </body>
 </html>
