--- a/node/public/index.html
+++ b/node/public/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="/bower_components/bootstrap/font-awesome/css/font-awesome.min.css" />
   <link rel="stylesheet" href="/inexorui/css/inexorui.css" />
 </head>
-<body>
+<body> <!-- class="mainmenu" -->
   <!-- The HUD section                                        -->
   <!--                                                        -->
   <!-- Each HUD needs a controller and a template             -->
