Menu, menu, menu

--- a/node/assets/index.html
+++ b/node/assets/index.html
@@ -12,7 +12,11 @@
   <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.min.css" />
   <link rel="stylesheet" href="/inexorui/css/inexorui.css" />
 </head>
-<body> <!-- class="mainmenu" -->
+<body>
+
+  <div id="inexorui-logo">
+  </div>
+
   <!-- The HUD section                                        -->
   <!--                                                        -->
   <!-- Each HUD needs a controller and a template             -->
