[node] Fixes /treeui path. Enhance README.md and bower.json, compile docs against 0.8. Release ready!

--- a/node/public/treeui/index.html
+++ b/node/public/treeui/index.html
@@ -8,12 +8,12 @@
   <title>Inexor Tree UI</title>
 
   <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="../bower_components/bootstrap/font-awesome/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css" />
   <link rel="stylesheet" href="../inexorui/css/inexorui.css" />
 
   <script src="../bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="jquery.json-view.min.js"></script>
-  <link href="jquery.json-view.min.css" rel="stylesheet" />
+  <script src="/treeui/jquery.json-view.min.js"></script>
+  <link href="/treeui/jquery.json-view.min.css" rel="stylesheet" />
 
 </head>
 <body>
